--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -68,91 +68,88 @@
 
 
     </nav>
+
+
 <div id="about"> 
-  <div class="main"> 
 
-      <div class="about row"> 
-        <div class="col-md-2"></div> 
-          <div class="col-md-8"> 
-            <br> 
-            <div class="aboutcontainer text-center"> 
-                <br><br> 
-                <h1 id="aboutshout"> what can 
+<!-- about page  -->
+        <div class="main"> 
+            <div class="about row"> 
+              <div class="col-md-2"></div> 
+                <div class="col-md-8"> 
+                  <br> <br> 
+                    <div class="aboutcontainer text-center"> 
+                      <br><br> 
+                      <h1 id="aboutshout"> what can 
 
-                     <img id="ultimate" src="<%= asset_path('ultimateplaya.svg') %>" alt="ultimateplayer">  
+                           <img id="ultimate" src="<%= asset_path('ultimateplaya.svg') %>" alt="ultimateplayer">  
 
-                  do for you? </h1> 
-                  <hr id="dashed"> 
+                        do for you? </h1> 
+                        <hr id="dashed"> 
 
-                  <p class="aboutext"> Do you play NBA Fantasy League?  This app lets you choose your NBA players and form your fantasy team according to their live stats. The app will receive live updated stats on your selected players during the NBA season. It calculates live stats and put your  starting five players and compare with other possible five. The app is designed to provide you with the best possible starting five players for your fantasy team. 
-                  It's a fast and easy way to manage all your NBA stats all in one place. 
-                  </p> 
+                        <p class="aboutext"> Do you play NBA Fantasy League?  This app lets you choose your NBA players and form your fantasy team according to their live stats. The app will receive live updated stats on your selected players during the NBA season. It calculates live stats, puts your  starting five players, and compares it with the other possible starting five. The app is designed to provide you with the best possible starting five players for your fantasy team. 
+                        It's a fast and easy way to manage all your NBA stats all in one place. 
+                        </p> 
 
-               <p class="aboutsignup"> <%= link_to "signup", signup_path, class: 'aboutsignup'  %> & get started!</p> 
+                     <p class="aboutsignup"> <%= link_to "signup", signup_path, class: 'aboutsignup'  %> & get started!</p> 
+
+                  </div> 
+                </div> 
+              <div class="col-md-2"></div> 
             </div> 
-          </div> 
-        <div class="col-md-2"></div> 
-      </div> 
+<!-- about section  -->
+
 
 <!-- starting - five play mechanic 
        -->
-  <div id="startingfive"> 
-    <br> 
-    <div class="startingfive row">
-    
+        <div id="startingfive"> 
+          <br> 
+            <div class="startingfive row">
+              <% if current_user %>
+                <br><br> 
+                  <h4>Pick - Your - Starting - Five! </h4> 
+                    <div ng-hide="vm.players.length == 5">
+                    
 
-       <% if current_user %>
-       <br><br> 
-         <h4>Pick - Your - Starting - Five! </h4> 
-           
-                  <div ng-hide="vm.players.length == 5">
+                        <select ng-change="vm.changedTeam()" ng-model="vm.selectedTeamId">
+                        <option>-- Select a Team --</option>
+                        <option ng-repeat="team in vm.teams" value="{{team.id}}">{{team.name}}</option>
+                        </select>
               
+                        <select ng-change="vm.selectedPlayer()" ng-model="vm.selectedPlayerId">
 
-                  <select ng-change="vm.changedTeam()" ng-model="vm.selectedTeamId">
-                  <option>-- Select a Team --</option>
-                  <option ng-repeat="team in vm.teams" value="{{team.id}}">{{team.name}}</option>
-                
-                  </select>
+                        <p id="selected">Selected Team</p>
+
+                        
+                        <ul class="col-md-5">
         
+                        
+                        <li> <option ng-repeat="player in vm.roster" value="{{player.id}}">{{player.player_name}}</option>
+                        </select> </li> 
 
-                  <select ng-change="vm.selectedPlayer()" ng-model="vm.selectedPlayerId">
+                  </div> 
 
-                              <p id="selected">Selected Team</p>
+                 <div class="animated bounceIn" ng-repeat="team in vm.teams" ng-show="vm.selectedTeamId == team.id"> 
+                  <img ng-hide="vm.players.length == 5" style="width:169px;" ng-src="{{ team.image_url }} ">
+                 </div> 
 
-                  <ul class="col-md-5">
-  
-                  
-                  <li> <option ng-repeat="player in vm.roster" value="{{player.id}}">{{player.player_name}}</option>
-                </select> </li> 
+                <div class="animated bounceIn" ng-repeat="player in vm.players"> 
+                     {{ player.player_name }} <img style="width:150px;"ng-src="{{ player.players_image }}"> + {{ player.player_position }} <img style="width:200px;"ng-src="{{ player.team.image_url }}">
+                </div> 
+                <% end %>
 
-              </div> 
-
-     <div class="animated bounceIn" ng-repeat="team in vm.teams" ng-show="vm.selectedTeamId == team.id"> 
-      <img ng-hide="vm.players.length == 5" style="width:169px;" ng-src="{{ team.image_url }} ">
-     </div> 
-
-    <div class="animated bounceIn" ng-repeat="player in vm.players"> 
-       {{ player.player_name }} <img style="width:150px;"ng-src="{{ player.players_image }}"> + {{ player.player_position }} <img style="width:200px;"ng-src="{{ player.team.image_url }}">
-    </div> 
-
-    <% end %>
-
-
-
-          <div ng-show="vm.players.length == 5"> 
-            <button ng-click="vm.resetplayers()" type="button" class="btn btn-info">RESET</button> <span class="glyphicon glyphicon-sound-5-1" aria-hidden="true">
+                <div ng-show="vm.players.length == 5"> 
+                  <button ng-click="vm.resetplayers()" type="button" class="btn btn-info">RESET</button> <span class="glyphicon glyphicon-sound-5-1" aria-hidden="true">
+                </div> 
           </div> 
-  </div> 
-</div> 
+      </div> 
+
 
 
 <footer> 
 
  <span> Powered by SPORTSDATA API </span> 
  <span> Ultimate Players © </span> 
- <span> Copyright by BenSam</span> 
-
-
 
 
 </footer> 
