--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,9 +25,8 @@ body {
 header {
   height: 580px;
   padding-top: 50px;
-  background: #f07057;
-  // background-image: url('/background1.jpg');
-  // background-size: 100%; 
+  background-image: url('/background1.jpg');
+
 }
 
 .main-nav,
@@ -316,7 +315,7 @@ p.aboutext {
 
 h4 {
   font-family: graduate, cursive; 
-  font-size: 20px; 
+  font-size: 30px; 
   color: $main_yellow;
 }
 
@@ -335,18 +334,18 @@ p#selected {
   font-size: 20px; 
 }
 
-.attr-footer {
-  width: 100%;  
+footer.attr-footer { 
   height: 50px;
   z-index: 150; 
   font-family: $font2; 
-  position: absolute; 
+  position: relative; 
   bottom: 0; 
-  right: 0; 
+
 
   padding-top: 8px; 
   background-color: green; 
   border-top: 10px solid $main_yellow; 
+  box-shadow: 0px 2px 3px 3px rgba(0,0,0,.4);
 
     div.left-side {
       color: white; 
@@ -391,4 +390,8 @@ p#selected {
             }
         }
     }
+}
+
+hr#starting {
+  border: 5px dashed $main_yellow; 
 }
