--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,13 +17,13 @@ $main_yellow: #F9BF3B;
 
 body {
   margin: 0;
-  padding-top: 530px; 
+  padding-top: 550px; 
 
 
 }
 
 header {
-  height: 580px;
+  height: 600px;
   padding-top: 50px;
   background-image: url('/background1.jpg');
 
@@ -250,7 +250,7 @@ span#ultimate {
   text-shadow: 1px 1px 1px green; 
 }
 
-.about {
+#about {
   margin-top: -20px; 
   padding-top: 20px; 
   background: url("basketballcourt.jpg");
