--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -349,7 +349,7 @@ ul.gridsystem {
       margin-top: 90px; 
       width: 150px;
       height: 400px; 
-      background-color: green; 
+      background-color: white; 
       border-radius: 10px; 
       border: 5px solid $main_yellow; 
 
